Fixing results and conclusion sections

--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 \singlespace
 \usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
 \usepackage{graphicx}
-\title{\textbf{Project Topic}}
+\title{\textbf{Model Context Protocol For Handwritten Text Recognition Systems}}
 \author{Miles Fike}
 
 \begin{document}
@@ -29,12 +29,12 @@ Within the AI field of computer vision, one popular goal is the transcription of
 
 \subsection*{Datasets}
 
-There are several different frequently implemented datasets for handwritten text recognition computer vision. As was seen in the implementation of a high accuracy convolutional neural network, the MNIST is a dataset used in computer vision systems\cite{10.1145/3727648.3727679}. This is a popular data set used for testing computer vision systems provided by the National Institute of Standards and Technology consisting of 70,000 grayscale images of 28 by 28 pixel digits\cite{10.1145/3727648.3727679}. Because the text is labelled accurately and organized, it allows for easy implementation of computer vision systems, but to add further data to a dataset like this or use the output computer vision system  to analyze another image, it would have to be processed similarly, a task that is much more complicated. On the NIST website for another dataset, the EMNIST, documentation clarifies that  this new data set includes images of characters from a-z in the same grayscale 28 by 28 pixel format used by the MNIST dataset\cite{7966217}. Each character in the dataset is labelled with its ASCII value. This makes many methods described for the other computer vision system very easily applicable to this extended version of the dataset they had used. The CHoiCe (Complex Handwritten Character) dataset is a collection of primarily cursive characters formatted similarly to the EMNIST\cite{CHoiCeDataset}. The images are 28 by 28 pixels with white text on a black background, but unlike EMNIST, the characters are not rotated or mirrored, allowing for much simpler image processing when preparing input images for the trained model. Figure \ref{fig:emnist_vs_choice} shows a comparison between EMNIST lowercase "b" samples (top row) and CHoiCe cursive "b" samples (bottom row), demonstrating the significant stylistic differences between isolated print characters and cursive characters extracted from continuous handwriting. More broadly, datasets are accessible for many written styles and languages, and complications only seem to arise when pursuing data sets for languages and styles that are rarely used.
+There are several different frequently implemented datasets for handwritten text recognition computer vision. As was seen in the implementation of a high accuracy convolutional neural network, the MNIST is a dataset used in computer vision systems\cite{10.1145/3727648.3727679}. This is a popular data set used for testing computer vision systems provided by the National Institute of Standards and Technology consisting of 70,000 grayscale images of 28 by 28 pixel digits\cite{10.1145/3727648.3727679}. Because the text is labelled accurately and organized, it allows for easy implementation of computer vision systems, but to add further data to a dataset like this or use the output computer vision system  to analyze another image, it would have to be processed similarly, a task that is much more complicated. On the NIST website for another dataset, the EMNIST, documentation clarifies that  this new data set includes images of characters from a-z in the same grayscale 28 by 28 pixel format used by the MNIST dataset\cite{7966217}. Each character in the dataset is labelled with its ASCII value. This makes many methods described for the other computer vision system very easily applicable to this extended version of the dataset they had used. The CHoiCe dataset is a collection of primarily cursive characters formatted similarly to the EMNIST\cite{CHoiCeDataset}. The images are 28 by 28 pixels with black or gray characters including numbers, lowercase letters, and capital letters on a white background, but unlike EMNIST, the characters are not rotated or mirrored, allowing for much simpler image processing when preparing input images for the trained model. Figure \ref{fig:emnist_vs_choice} shows a comparison between EMNIST lowercase "b" samples (top row) and CHoiCe cursive "b" samples (bottom row), demonstrating the significant stylistic differences between isolated print characters and cursive characters extracted from continuous handwriting. More broadly, datasets are accessible for many written styles and languages, and complications only seem to arise when pursuing data sets for languages and styles that are rarely used.
 
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.5\textwidth]{ProjectCode/CHoiCe-Dataset/4.png}
-    \caption{Comparison of EMNIST lowercase "b" samples (top row) and CHoiCe cursive "b" samples (bottom row)\cite{CHoiCeDataset}. Note that within the dataset image files, the CHoiCe data appears to be white with black text.}
+    \caption{Comparison of EMNIST lowercase "b" samples (top row) and CHoiCe cursive "b" samples (bottom row)\cite{CHoiCeDataset}. Note that within the dataset image files, the CHoiCe data appears to be white with black text but in the image files the opposite is true. Furthermore, each dataset uses 28 by 28 pixel letters.}
     \label{fig:emnist_vs_choice}
 \end{figure}
 
@@ -66,13 +66,9 @@ A fourth model was created using the same convolutional and pooling layers as Mo
 
 To account for uppercase letters, lowercase letters, and digits, a separate system was developed using the EMNIST ByClass dataset with 62 character classes. The architecture follows Model2 but with adjusted output dimensions. The first convolutional layer applies 32 filters with a 5 by 5 kernel and stride of 1, producing feature maps of dimension $(28-5)+1=24$, reduced to 12 by 12 through max pooling. A second convolutional layer expands to 64 channels, resulting in $(12-5)+1=8$ dimension feature maps, compressed to 4 by 4 through pooling. The 1024 outputs ($64 \times 4 \times 4$) pass through three fully connected layers: 256 neurons, then 104, and finally 62 classes. The ReLU activation function converts negative values to zero after each convolutional layer, while hyperbolic tangent (tanh) normalizes outputs between -1 and 1 between fully connected layers. All EMNIST-based models were trained for 2 epochs, as the large dataset allowed adequate accuracy quickly. This system had longer training time due to the 62 classes but was ultimately implemented in the MCP Server because it handles capitalization and distinguishes between digits and letters.
 
-The full EMNIST was broken into training and testing sets using its own built in attributes. This will be explained further in future drafts.
+The full EMNIST was broken into training and testing sets using its own built in attributes.
 
-Loss measures how confident the system is in its predictions. It is derived from the system's perceived likelihood that a given image matches a given character. As the system trains, loss changes with each image processed. Ideally, loss should be 0, indicating 100\% certainty. Model3's loss is seen below
-
-There will be a graph for the loss of Model3 here, but this proves difficult to construct as there are so many data points. The program will be altered to get averages over a wider area before making this graph.
-
-As the graph indicates, in the first several hundred images processed, loss decreased drastically indicating rapid development by the system. However, in the final hundreds of images loss fluctuated around 0.3 and does not as consistently decrease. This indicates that the system may require substantially more training data to improve its accuracy further.
+Loss measures how confident the system is in its predictions. It is derived from the system's perceived likelihood that a given image matches a given character. As the system trains, loss changes with each image processed. Ideally, loss should be 0, indicating 100\% certainty. In the first several hundred images processed, loss decreased drastically indicating rapid development by the system. However, in the final hundreds of images loss fluctuated around 0.3 and does not as consistently decrease. This indicates that the system may require substantially more training data to improve its accuracy further.
 
 For image preparation, each letter needs to be separated from the larger image of text. The first approach identified isolated blobs of white pixels by iterating through surrounding pixels. This proved ineffective for several reasons. The system picked up background noise like smudges and tried to label them as letters. A Gaussian blur, which smooths the image by averaging nearby pixels, could prevent this issue. The real problem appeared with "i" and "j." The dots on these letters were identified as separate characters, making proper isolation impossible. Looking for nearby images did not help because the dots were often significantly separated from the letter bodies. 
 
@@ -80,7 +76,7 @@ Because of these flaws, a separate program was developed. The program converts t
 
 A separate Python module processes individual letter images for the computer vision system. Characters are blurred using a Gaussian blur to smooth colors and reduce background noise. A threshold converts pixels with color greater than 100 (on a 0-255 scale) to black. Black and white pixels are then swapped to create white text on a black background. Images are padded into perfect squares to prevent warping during resizing, then converted to 128 by 128 pixels. The bounding box of the character is identified and the image is cropped with 2 pixel padding before being resized to 28 by 28 pixels. Each image is mirrored and rotated 90 degrees to match the EMNIST dataset orientation. The motivation behind this orientation remains unclear. Labels are returned left to right from the original image to produce the final text output.
 
-In addition to the EMNIST-based computer vision system, a separate system was developed using the CHoiCe (Characters of Historical Choice) dataset to demonstrate the expandability of the MCP architecture for handling alternative handwriting styles. The CHoiCe dataset is a significantly smaller collection of handwritten character images compared to the EMNIST, requiring a different approach to training. The same neural network architecture used for the EMNIST ByClass system was employed, utilizing 32 and 64 channel convolutional layers with identical pooling and fully connected layer structures outputting to 62 character classes. However, due to the limited size of the CHoiCe dataset, the training process required substantially more epochs to achieve reasonable accuracy.
+In addition to the EMNIST-based computer vision system, a separate system was developed using the CHoiCe dataset to demonstrate the expandability of the MCP architecture for handling alternative handwriting styles. The CHoiCe dataset is a significantly smaller collection of handwritten character images compared to the EMNIST, requiring a different approach to training. The same neural network architecture used for the EMNIST ByClass system was employed, utilizing 32 and 64 channel convolutional layers with identical pooling and fully connected layer structures outputting to 62 character classes. However, due to the limited size of the CHoiCe dataset, the training process required substantially more epochs to achieve reasonable accuracy which unfortunately remained around 60\% to 65\%.
 
 The CHoiCe computer vision system was trained for 45 epochs, a dramatic increase compared to the 2 epochs used for the EMNIST models. This extended training period was necessary because smaller datasets require the model to iterate over the available data many more times to learn meaningful patterns. The dataset was split into 80\% training data and 20\% testing data using a random split. During training, the system used stochastic gradient descent with a learning rate of 0.01 and momentum of 0.9, with cross-entropy loss as the optimization criterion.
 
@@ -94,7 +90,7 @@ The EMNIST MCP Server was developed to handle general handwriting recognition fo
 
 The server includes the full image preprocessing pipeline built directly into its functions. When an image is input, it is first converted to grayscale and a Gaussian blur is applied to reduce background noise. From here, a threshold is applied to convert pixels to black and white, and non-black pixels are converted to white to create white text on a black background. The image is then padded into a square, resized to 128 by 128 pixels, cropped to the bounding box of the character with 2 pixel padding, and finally resized to 28 by 28 pixels to match the EMNIST format. The image is mirrored and rotated 90 degrees to match the orientation of images in the EMNIST dataset. The server can accept both local file paths and HTTP/HTTPS URLs for input images.
 
-The neural network architecture embedded in the server uses the same structure as the EMNIST ByClass computer vision system with 32 and 64 channel convolutional layers, max pooling layers, and three fully connected layers outputting to 62 character classes. The ReLU activation function is applied after convolutional layers and the hyperbolic tangent function is used between fully connected layers. The server runs the model in evaluation mode and uses CUDA if available, otherwise defaulting to CPU processing.
+The neural network architecture embedded in the server uses the same structure as the EMNIST ByClass computer vision system with 32 and 64 channel convolutional layers, max pooling layers, and three fully connected layers outputting to 62 character classes. The server runs the model in evaluation mode and uses CUDA if available, otherwise defaulting to CPU processing.
 
 \subsection*{CHoiCe MCP Server}
 
@@ -110,10 +106,6 @@ To interact with this system, Anthropic's Claude Opus 4.5 model serves as the MC
 
 \section{Results}
 
-For the results section, a graph of the loss of each computer vision system will be shown as the project progressed. This will be shown for earlier renditions of the system as well as the final chosen system. It will be used to demonstrate the accuracy of the system. This has not been done yet because it is believed that a lower loss from the system will still be attained.
-
-Examples of lines of text and the output from Claude's tool calls will also be shown. This unfortunately does not exist yet.
-
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.3\textwidth]{ProjectCode/imgs/l.jpg}
@@ -123,14 +115,13 @@ Examples of lines of text and the output from Claude's tool calls will also be s
 
 When both MCP servers were given an image of a cursive lowercase "l" shown in Figure \ref{fig:cursive_l}, the results demonstrated the challenges of handwriting recognition. The EMNIST server predicted an uppercase "I" with 29.4\% confidence. The CHoiCe server predicted a "D" with 96.77\% confidence. The intended character was a lowercase cursive "l" written in a round cursive style. This particular "l" was fundamentally flawed as input because the round cursive shape became distorted during image processing, making it appear more circular than the typical pipe-shaped lowercase "l" that OCR systems expect. The EMNIST server's low confidence guess of uppercase "I" shows the model recognized that the input did not match any character well. The CHoiCe server's high confidence prediction of "D" represents a false positive, where the model is very certain about an incorrect answer. This is a known issue with neural networks trained on small datasets where the model can become overconfident in its predictions.
 
-As was previously shown in the example with figure1, the handwritten name input into the system, errors in transcription are frequent and often very obvious. Additionally, spaces may not be detected by the system. Among x attempts in running our convolutional neural network Model3 on Figure1, an average of y characters were seen incorrectly transcribed. This reflects the system’s overall accuracy but also shows that the system is far from perfect. Generally
+However, for many inputs Claude returned very close results such as "Mile5Fike" for the handwritten name "MilesFike" shown in Figure 1. The other CHoiCe had far less accurate results but all parts of the  program were successfully interacted with by CLaude through the Model Context Protocol. However, Claude would never return just the results and would often present the resulting text in a chart with confidence rather than giving back just a string. This prevents the easy reading of text that should ideally be provided. Additionally, in some instances, Claude presented its own guesses as to the letters in the text or gave impossibly accurate results considering the low accuracy of the server it was using.
 
-The next section of the results will show how different text styles were successfully identified by the Model Context Protocol. This also does not exist yet but the MCP will be configured to return the name of the system that it used. 
-
+When choosing between which system to use, Claude usually chose the EMNIST MCP server unless specifically prompted that the handwriting was cursive. On one occasion, Claude would use the CHoiCe system first but after poor quality results and lower confidence scores, it would inevitably switch to the EMNIST system for better results. This is not what the project was intended to do. Ideally, the correct server would have been selected initially and the second server would never have been utilized. Claude was very consistent with server call outputs though, returning "Mile5Fike" on 3 separate occasions in separate chats. This indicates that the same model was being used each time and that the results were reproducible.
 \section{Conclusion}
 This project demonstrates the potential of integrating multiple specialized computer vision systems into a single, adaptive AI framework for handwriting recognition. By redirecting input images to the most suitable model, the system overcomes the limitations of single computer vision system strategies. The design provides a foundation for expansion as new models are developed. The result is a flexible, scalable handwriting recognition system capable of evolving as more computer vision systems are added.
 
-Several improvements could enhance this system in future development. First, the cursive segmentation algorithm could be improved by implementing machine learning-based approaches that learn to identify character boundaries from training data rather than relying on simple column-based gap detection. Recurrent neural networks or transformer architectures could potentially learn the patterns of cursive connections and identify where one character ends and another begins. Second, ligature recognition could be implemented to handle common letter combinations that are written as connected units. Ligatures like "ff", "fi", "fl", and "th" appear frequently in both cursive and historical handwriting, where adjacent letters merge into single glyphs. Training the system to recognize these combined forms rather than attempting to segment them into individual characters could improve accuracy for cursive and historical texts. Third, the CHoiCe model accuracy could be improved by data augmentation techniques such as rotating, scaling, and adding noise to training images to artificially expand the small dataset. Despite the poor accuracy results from the CHoiCe system, this work demonstrates the importance of specialized character recognition for different handwriting styles. A general-purpose model trained only on modern handwriting cannot adequately handle historical scripts, and the MCP architecture allows these specialized models to coexist and be selected appropriately. Fourth, a confidence-based fallback system could be implemented where if one model returns low confidence scores, the system automatically tries alternative models and compares results. Fifth, post-processing with dictionary lookup could correct obvious spelling errors by comparing recognized text against known words and suggesting corrections. Sixth, the system could be expanded to handle non-Latin scripts by training additional models on datasets for Cyrillic, Arabic, Chinese, and other writing systems. Seventh, support for historical fonts with different letter forms could be added. Many historical documents use letter forms that differ significantly from modern writing, such as the long s that resembles an "f", blackletter scripts with angular letterforms, or early printing typefaces with distinct character shapes. Training specialized models to recognize these historical letter forms would enable transcription of a wider range of archival documents. Finally, a web-based interface could make the system more accessible by allowing users to upload images directly through a browser rather than requiring local file paths.
+Several improvements could enhance this system in future development. First, the cursive segmentation algorithm could be improved by implementing machine learning-based approaches that learn to identify character boundaries from training data rather than relying on simple column-based gap detection. Recurrent neural networks or transformer architectures could potentially learn the patterns of cursive connections and identify where one character ends and another begins. Second, ligature recognition could be implemented to handle common letter combinations that are written as connected units. Ligatures like "ff", "fi", "fl", and "th" appear frequently in both cursive and historical handwriting, where adjacent letters merge into single glyphs. Training the system to recognize these combined forms rather than attempting to segment them into individual characters could improve accuracy for cursive and historical texts. Third, a confidence-based fallback system could be implemented where if one model returns low confidence scores, the system automatically tries alternative models and compares results. Fourth, post-processing with dictionary lookup could correct obvious spelling errors by comparing recognized text against known words and suggesting corrections. Fifth, the system could be expanded to handle non-Latin scripts by training additional models on datasets for Cyrillic, Arabic, Chinese, and other writing systems. Sixth, support for historical fonts with different letter forms could be added. Many historical documents use letter forms that differ significantly from modern writing, such as the long s that resembles an "f", blackletter scripts with angular letterforms, or early printing typefaces with distinct character shapes. Training specialized models to recognize these historical letter forms would enable transcription of a wider range of archival documents. Finally, a web-based interface could make the system more accessible by allowing users to upload images directly through a browser rather than requiring local file paths.
 \bibliographystyle{acm}
 \bibliography{bibliography.bib}
 
